@startuml BusinessLayer
skinparam classAttributeIconSize 0

title Business Layer

package "Business Layer" #LightGreen {
  interface DocumentService {
    + getDocumentsForTransaction(txId, userId): List<DocumentResponseDTO>
    + getDocument(docId, userId): DocumentResponseDTO
    + createDocument(txId, dto, userId): DocumentResponseDTO
    + updateDocument(docId, dto, userId): DocumentResponseDTO
    + deleteDocument(docId, userId): void
    + submitDocument(txId, docId, file, userId, type): DocumentResponseDTO
    + uploadFileToDocument(txId, docId, file, userId, type): DocumentResponseDTO
    + getAllDocumentsForUser(userId): List<DocumentResponseDTO>
    + getDocumentDownloadUrl(docId, verId, userId): String
    + reviewDocument(txId, docId, dto, brokerId): DocumentResponseDTO
    + sendDocumentRequest(docId, brokerId): DocumentResponseDTO
    + shareDocumentWithClient(docId, brokerId): DocumentResponseDTO
    + getOutstandingDocumentSummary(brokerId): List<OutstandingDocumentDTO>
    + sendDocumentReminder(docId, brokerId): void
    + getStageChecklist(txId, stage, userId): StageChecklistResponseDTO
    + setChecklistManualState(txId, stage, itemKey, checked, brokerId): StageChecklistResponseDTO
  }

  class DocumentServiceImpl {
    - documentRepository: DocumentRepository
    - transactionRepository: TransactionRepository
    - userAccountRepository: UserAccountRepository
    - notificationService: NotificationService
    - emailService: EmailService
    - objectStorageService: ObjectStorageService
    - stageTemplateRegistry: StageDocumentTemplateRegistry
    - checklistStateRepository: ChecklistStateRepository
    --
    + getDocumentsForTransaction(txId, userId): List<DocumentResponseDTO>
    + createDocument(txId, dto, userId): DocumentResponseDTO
    + submitDocument(txId, docId, file, userId, type): DocumentResponseDTO
    + uploadFileToDocument(txId, docId, file, userId, type): DocumentResponseDTO
    + reviewDocument(txId, docId, dto, brokerId): DocumentResponseDTO
    + sendDocumentRequest(docId, brokerId): DocumentResponseDTO
    + shareDocumentWithClient(docId, brokerId): DocumentResponseDTO
    + getStageChecklist(txId, stage, userId): StageChecklistResponseDTO
    + setChecklistManualState(txId, stage, itemKey, checked, brokerId): StageChecklistResponseDTO
    - validateFile(file): void
    - validateCanSubmit(document): void
    - validateCanReview(document): void
    - mapToResponseDTO(entity): DocumentResponseDTO
    - filterForClientVisibility(docs, userId): List<Document>
  }

  class StageDocumentTemplateRegistry {
    - stageTemplates: Map<StageEnum, List<StageDocumentTemplate>>
    --
    + getTemplatesForStage(stage): List<StageDocumentTemplate>
    + getAllTemplates(): Map<StageEnum, List<StageDocumentTemplate>>
  }

  interface NotificationService {
    + createDocumentNotification(doc, recipientId, category): void
  }

  class EmailService {
    + sendDocumentRequestedNotification(email, clientName, brokerName, docName, docType, notes, lang, requiresSignature): void
    + sendDocumentSubmittedNotification(doc, brokerEmail, uploaderName, docName, docType, lang): void
    + sendDocumentStatusUpdatedNotification(doc, clientEmail, clientName, brokerName, docName, docType, lang): void
    + sendDocumentEditedNotification(clientEmail, clientName, brokerName, docName, docType, lang): void
  }

  ' Intra-package relationships
  DocumentServiceImpl ..|> DocumentService : implements
  DocumentServiceImpl --> NotificationService : uses
  DocumentServiceImpl --> EmailService : uses
  DocumentServiceImpl --> StageDocumentTemplateRegistry : uses
}

@enduml
